# tavernmaster

./: .env.example  .eslintrc.cjs  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_1.md  IMPLEMENTATION_PLAN_2_UI_REDESIGN.md  IMPLEMENTATION_PLAN_2_UI_REDESIGN_NOTES.md  IMPLEMENTATION_PLAN_3_TUTORIAL_CAMPAIGN.md  NOTICE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-macos-dmg.yml  ci.yml
docs/: ARCHITECTURE.md  DATA_MODEL.md  LLM_RUNTIME.md  ROLLBACK.md  SECURITY.md  SUPABASE_SYNC.md  UI_STYLE.md  USER_GUIDE.md
docs/architecture/: ARCHITECTURE.md  DATA_MODEL.md  SECURITY.md
docs/guides/: CHARACTER_CREATION_WIZARD.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/plans/: 00_IMPLEMENTATION_PLANS_README.md  01_FOUNDATION_PERSISTENCE_SECURITY_TESTS.md  02_CONTINUITY_TURN_ENGINE_CANON_MEMORY.md  03_AI_GUARDRAILS_PLAYER_UX_COMBAT_SYNC.md  09_PR_SIZED_PLANS_README.md  10_PR_PLAN_FOUNDATION.md  11_PR_PLAN_CONTINUITY.md  12_PR_PLAN_AI_UX.md  13_PR_PLAN_COMBAT_SRD_SYNC_RELEASE.md  IMPLEMENTATION_PLAN_1.md  IMPLEMENTATION_PLAN_2_UI_REDESIGN_NOTES.md  IMPLEMENTATION_PLAN_3_TUTORIAL_CAMPAIGN.md  IMPLEMENTATION_PLAN_4_FIRST_USABLE_LOOP_AND_CHARACTER_WIZARD_FIXED.md  IMPLEMENTATION_PLAN_5_FIXES.md  IMPLEMENTATION_PLAN_6_Full_SRD.md
docs/sync/: SUPABASE_SYNC.md
src/: main.test.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
(+271 files in other folders)
