[package]
name = "tavern-master"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
tauri = { version = "2.0.0" }
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
keyring = "2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
